# anywidget-minimal-react-template

./: .gitignore  README.md  hello.ipynb  package-lock.json  package.json  pyproject.toml  vite.config.js  widget.jsx
.ipynb_checkpoints/: hello-checkpoint.ipynb
hello_widget/: __init__.py
hello_widget/static/: main.js  widget.js
js/: package-lock.json  package.json  widget.jsx
qr_code_widget/static/: widget.js
src/: App.jsx  index.js  widget.jsx
src/qr_code_widget/: __init__.py
