[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "qr-code-widget"
version = "0.0.0"
dependencies = [
    "anywidget"
]

[project.optional-dependencies]
dev = [
    "watchfiles",
    "jupyterlab"
]

[tool.hatch.build]
artifact = "src/qr_code_widget/widget.js"

[tool.hatch.build.hooks.jupyter-builder]
build-function = "hatch_jupyter_builder.npm_builder"
ensured-targets = ["src/qr_code_widget/widget.js"]
skip-if-exists = ["src/qr_code_widget/widget.js"]
dependencies = ["hatch-jupyter-builder>=0.5.0"]

[tool.hatch.build.hooks.jupyter-builder.build-kwargs]
npm = "npm"
build_cmd = "build"
path = "js"
